General improvements and tweaks, added date column etc

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
 
-  <title>rcdbot-vue</title>
+  <title>rdb</title>
 </head>
 
 <body>
